# forja

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build_errors.txt  clippy_result.txt  config.example.toml  err.txt
.github/workflows/: ci.yml
crates/forja-channel/: Cargo.toml  plan.md
crates/forja-channel/src/: cli.rs  lib.rs  multi.rs  telegram.rs
crates/forja-core/: Cargo.toml  plan.md
crates/forja-core/src/: engine.rs  error.rs  lib.rs  scheduler.rs  tests.rs  traits.rs  types.rs
crates/forja-llm/: Cargo.toml  plan.md
crates/forja-llm/src/: client.rs  config.rs  lib.rs  models.rs  presets.rs
crates/forja-memory/: Cargo.toml  plan.md
crates/forja-memory/src/: lib.rs  storage.rs  tokenizer.rs
crates/forja-tools/: Cargo.toml  plan.md
crates/forja-tools/src/: claude_code.rs  codex.rs  confirm.rs  file.rs  gemini_cli.rs  lib.rs  search.rs  shell.rs  web.rs
docs/: ARCHITECTURE.md  ONBOARDING_CONFIG_PLAN.md  PHASE2_PLAN.md  PHASE4_MCP_PLAN.md  RESEARCH.md  ROADMAP.md
src/: config.rs  main.rs  oauth.rs  provider_registry.rs
