[workspace]
members = [
    "crates/forja-core",
    "crates/forja-llm",
    "crates/forja-memory",
    "crates/forja-channel",
    "crates/forja-tools",
]

[package]
name = "forja"
version = "0.1.0"
edition = "2024"
description = "Lightweight AI Agent Engine Core Framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ai4wm/forja"

[dependencies]
forja-core = { version = "0.1.0", path = "crates/forja-core", features = ["runtime", "memory"] }
forja-llm  = { version = "0.1.0", path = "crates/forja-llm" }
forja-memory = { version = "0.1.0", path = "crates/forja-memory" }
forja-tools = { version = "0.1.0", path = "crates/forja-tools" }
forja-channel = { version = "0.1.0", path = "crates/forja-channel" }
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
indicatif = "0.17"
async-trait = "0.1"
ctrlc = "3.4"
tokio-stream = "0.1"
toml = "0.8"
dirs-next = "2.0"
serde = { version = "1", features = ["derive"] }

[features]
default = ["telegram"]
telegram = ["forja-channel/telegram"]
discord = ["forja-channel/discord"]
