[package]
name = "forja-core"
version = "0.1.0"
edition = "2024"
description = "Core engine traits and types for Forja"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ai4wm/forja"

[features]
default = []
memory = []
runtime = ["dep:tokio"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
tokio-stream = "0.1"
async-recursion = "1.1"
indicatif = "0.17"

# feature="runtime" 일 때만 tokio 런타임 매크로 활성화
tokio = { version = "1.0", features = ["macros", "rt"], optional = true }
